Create PSBT swap endpoints
