# wallet/routes.go
@@ -26,4 +26,10 @@ func RegisterWalletRoutes(e *echo.Echo, cfg *config.Config, tapdClient tapd.Tapd
 	walletGroup.GET("/transfers", GetTransfers(tapdClient))
 	//walletGroup.GET("/transaction/:id", GetTransaction)
 	walletGroup.POST("/receive", ReceiveAsset(tapdClient)) // Generate an invoice to receive an asset
+
+	// Buy/Sell routes for trustless swaps
+	walletGroup.POST("/buy/start", BuyStart(tapdClient))
+	walletGroup.POST("/buy/complete", BuyComplete(tapdClient))
+	walletGroup.POST("/sell/start", SellStart(tapdClient))
+	walletGroup.POST("/sell/complete", SellComplete(tapdClient))
 }
